css make me wannacry need to fix bug of switching off screen and only 1 action of that item. josh gonna help with css and animations

--- a/src/App.css
+++ b/src/App.css
@@ -61,7 +61,7 @@
 
 
 /* go button in header */
-/* TODO: dont select text and make cursour a clicky one */
+/* TODO: dont select text and make cursour a clicky one on hover*/
 #headergo {
   font-size: calc(1rem + 10px);
   padding: 0 2rem;
@@ -86,26 +86,51 @@
 
 
 
-
 /* 2nd main part, rolling and body */
 #bigspon {
-
+  background-color: darkseagreen;
+  margin: 0 10vw;
 }
 
 
 /* both spec and action rolling div */
 #looptext {
-  display: inline-block;
+  /* display: inline-block; */
   background-color: orange;
-}
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 
+  font-size: calc(15px + 2vmin);
+  /* padding-left: calc(50% - 3em); */
+  /* height: 50%; */
+  padding-top: 5vh;
+  width: 100%;
+  /* flex-wrap: wrap; */
+}
 /* action rolling */
 #actiontext {
-  display: inline;
+  /* display: inline; */
+  margin-right: .5em;
+  /* padding-left: 25%; */
 }
-
 /* specific rolling */
 #spectext {
-  display: inline;
+  overflow-wrap: break-word;
+  /* padding-right: 25% */
+  /* min-width: 50%; */
+  padding-right: 15%;
+  width: 100%
 }
 
+
+/* Text for details and description */
+#desctext{
+  background-color: olive;
+}
+
+.makemefull{
+  width: 100%;
+  /* height: 100%; */
+  background-color: #61dafb;
+}
